# CppUnicode

./: .gitmodules  CMakeLists.txt  LICENSE
include/bigj/: basic_string.hpp  basic_string_view.hpp  string.hpp  string_view.hpp
include/bigj/unicode/: code_point.hpp  config.hpp  encoding.hpp  iterator.hpp  reverse_iterator.hpp  utf16.hpp  utf32.hpp  utf8.hpp
include/bigj/unicode/detail/: byte_swap.hpp  endian.hpp  error_code.hpp  exceptions.hpp  validate_string.hpp
include/bigj/unicode/encoding/: utf16.hpp  utf32.hpp  utf8.hpp
tests/: CMakeLists.txt
tests/src/: iterator.cpp  reverse_iterator.cpp  string.cpp  string_view.cpp
tests/src/detail/: error_code.hpp  random_string_generator.cpp  random_string_generator.hpp
tests/src/encoding/: utf16.cpp  utf32.cpp  utf8.cpp
